<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "@drawable/background" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:layout_marginBottom="@dimen/layout_margin" 
		android:layout_marginLeft="@dimen/layout_margin" 
		android:layout_marginTop="@dimen/layout_margin" 
		android:layout_marginRight="@dimen/layout_margin"  >
        
        <TextView
            android:id="@+id/txt_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout_username"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="@string/layout_max_words"
            android:digits="1234567890qwertyuiopasdfghjklzxcvbnm"
            android:singleLine="true">

            <requestFocus />
        </EditText>
        
        <TextView
            android:id="@+id/txt_error_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout_error_username"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/red" />

        <View 
            android:layout_width="fill_parent"
            android:layout_height="@dimen/layout_space_little" />
        
        <TextView
            android:id="@+id/txt_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout_password"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:maxLength="@string/layout_max_words"
            android:digits="1234567890qwertyuiopasdfghjklzxcvbnm"
            android:inputType="textPassword" />
        
        <TextView
            android:id="@+id/txt_error_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout_error_password"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/red" />
        
        <View 
            android:layout_width="fill_parent"
            android:layout_height="@dimen/layout_space_little" />
        
        <TextView
            android:id="@+id/txt_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout_nickname"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <EditText
            android:id="@+id/edt_nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="@string/layout_max_nickname"
            android:digits="1234567890qwertyuiopasdfghjklzxcvbnm QWERTYUIOPASDFGHJKLZXCVBNM"
            android:singleLine="true">

            <requestFocus />
        </EditText>
        
        <TextView
            android:id="@+id/txt_error_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout_error_nickname"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/red" />
        
        <View 
            android:layout_width="fill_parent"
            android:layout_height="@dimen/layout_space_little" />
        
        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/layout_register" />
        
        <View 
            android:layout_width="fill_parent"
            android:layout_height="@dimen/layout_space_little" />
        
        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout_back" />
        
    </LinearLayout>

</FrameLayout>